finished styling the left side banner with the logo

--- a/index.html
+++ b/index.html
@@ -9,48 +9,23 @@
   </head>
   <body>
     <div class="side-banner">
-      <img src="./images/img.jpg" alt="tennis court" />
       <div class="overlay">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 512 512"
-          style="enable-background: new 0 0 512 512"
-          xml:space="preserve"
-        >
-          <path
-            style="fill: #b5ce00"
-            d="M503.916 256c0 136.92-110.996 247.916-247.916 247.916S8.084 392.92 8.084 256 119.08 8.084 256 8.084 503.916 119.08 503.916 256z"
-          />
-          <path
-            style="fill: #fff"
-            d="M466.223 289.751c-7.882 49.459-33.236 94.79-71.394 127.642-38.567 33.205-87.871 51.491-138.829 51.491a8.084 8.084 0 0 1 0-16.168c97.278 0 178.975-69.606 194.255-165.509a8.085 8.085 0 0 1 15.968 2.544zm-5.423-41.835a8.084 8.084 0 0 0-8.084 8.084l-.005 1.425a8.086 8.086 0 0 0 8.024 8.145h.061c4.437 0 8.05-3.58 8.083-8.024.003-.515.005-1.029.005-1.545a8.084 8.084 0 0 0-8.084-8.085z"
-          />
-          <path
-            style="fill: #ffffa9"
-            d="M406.905 59.309V256c0 83.343-67.562 150.905-150.905 150.905S105.095 339.343 105.095 256V59.309C146.894 27.192 199.212 8.084 256 8.084s109.106 19.108 150.905 51.225z"
-          />
-          <path
-            style="fill: #cdef00"
-            d="M374.568 38.229V256c0 65.379-53.19 118.568-118.568 118.568S137.432 321.379 137.432 256V38.229C172.654 19.011 213.05 8.084 256 8.084s83.346 10.927 118.568 30.145z"
-          />
-          <path
-            d="M437.019 74.981C388.667 26.628 324.379 0 256 0S123.333 26.628 74.981 74.981 0 187.62 0 256s26.628 132.667 74.981 181.019S187.62 512 256 512s132.667-26.628 181.019-74.981S512 324.379 512 256s-26.628-132.667-74.981-181.019zm-323.84-11.53a241.296 241.296 0 0 1 16.168-11.021V256c0 69.837 56.816 126.653 126.653 126.653S382.653 325.837 382.653 256V52.43a241.159 241.159 0 0 1 16.168 11.021V256c0 78.752-64.069 142.821-142.821 142.821S113.179 334.752 113.179 256V63.451zm253.305-20.269V256c0 60.922-49.563 110.484-110.484 110.484S145.516 316.922 145.516 256V43.182C178.601 25.935 216.179 16.168 256 16.168s77.399 9.767 110.484 27.014zM256 495.832C123.756 495.832 16.168 388.244 16.168 256c0-71.302 31.288-135.423 80.842-179.392V256c0 87.667 71.322 158.989 158.989 158.989S414.989 343.667 414.989 256V76.608c49.554 43.968 80.842 108.09 80.842 179.392.001 132.244-107.587 239.832-239.831 239.832z"
-          />
-        </svg>
-
-        <div class="logo-text">Tennis</div>
+        <img src="./images/logo.png" alt="logo" class="logo">
+        <h1 class="name">ODIN</div>
       </div>
     </div>
     <div class="content">
-      <p>
-        This is not a real online service! You know you need something like this
-        in your life to help you realize your deepest dreams. <br />Sign up
-        <em>now</em> to get started.<br />
-      </p>
-      <p>You <em>know</em> you want to.</p>
+      <div class="text">
+        <p>
+          This is not a real online service! You know you need something like this
+          in your life to help you realize your deepest dreams. <br />Sign up
+          <em>now</em> to get started.<br />
+        </p>
+        <p>You <em>know</em> you want to.</p>
+      </div>
       <div class="form-container">
+        <h3>Let's do this!</h3>
         <form id="form" action="#">
-          <h3>Let's do this!</h3>
           <div class="form-left-side">
             <label for="fname">First name<br /></label>
             <input type="text" id="fname" name="fname" /><br />
@@ -72,11 +47,11 @@
             <label for="confirm">Confirm Password<br /></label>
             <input type="password" id="confirm" name="confirm" /><br />
           </div>
-
-          <button>Create Account</button>
-
-          <span>Already have an account? <a href="#">Log in</a></span>
         </form>
+      </div>
+      <div class="submit">
+        <button>Create Account</button>
+        <span>Already have an account? <a href="#">Log in</a></span>
       </div>
     </div>
   </body>
