the password field display a red border with invalid input

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <input type="email" id="email" name="email" /><br />
 
             <label for="password">Password<br /></label>
-            <input type="password" id="password" name="password" /><br />
+            <input type="password" id="password" name="password" required minlength="6"/><br />
           </div>
 
           <div class="form-right-side">
@@ -48,7 +48,7 @@
             <input type="number" id="number" name="number" /><br />
 
             <label for="confirm">Confirm Password<br /></label>
-            <input type="password" id="confirm" name="confirm" /><br />
+            <input type="password" id="confirm" name="confirm" required minlength="6"/><br />
           </div>
         </form>
       </div>
